--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to A3K55!</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./fontawesome-free-6.5.1-web/fontawesome-free-6.5.1-web/css/all.css">
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins'>
     
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="a3">
@@ -34,7 +34,7 @@
         <p>Form teacher</p>
         <div class="card__social">
             <a href="https://www.facebook.com/hoduchanhdhv" target="_blank">
-                <i class="fa-brands fa-facebook-f" ></i>
+                <i class="fa fa-facebook"></i>
             </a>
         </div>
         <button>More info</button>
@@ -48,7 +48,7 @@
         <p>IT teacher</p>
         <div class="card__social">
             <a href="https://www.facebook.com/nguyenductoandhv" target="_blank">
-                <i class="fa-brands fa-facebook-f" ></i>
+                <i class="fa fa-facebook"></i>
             </a>
         </div>
         <button>More info</button>
@@ -61,7 +61,7 @@
         <p>Class monitor</p>
         <div class="card__social">
             <a href="https://www.facebook.com/quann.minh.19" target="_blank">
-                <i class="fa-brands fa-facebook-f" ></i>
+                <i class="fa fa-facebook"></i>
             </a>
         </div>
         <button>More info</button>
@@ -74,7 +74,7 @@
         <p>Class secretary</p>
         <div class="card__social">
             <a href="https://www.facebook.com/nguyenngoc.phu.100046" target="_blank">
-                <i class="fa-brands fa-facebook-f" ></i>
+                <i class="fa fa-facebook"></i>
             </a>
         </div>
         <button>More info</button>
