--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to A3K55!</title>
     <link rel="stylesheet" href="style.css">
-    
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -63,6 +62,9 @@
             <a href="https://www.facebook.com/quann.minh.19" target="_blank">
                 <i class="fa fa-facebook"></i>
             </a>
+            <a href="https://github.com/MinhQuanABCXYZ" target="_blank">
+              <i class="fa fa-github"></i>
+            </a>
         </div>
         <button>More info</button>
     </div>
@@ -75,6 +77,9 @@
         <div class="card__social">
             <a href="https://www.facebook.com/nguyenngoc.phu.100046" target="_blank">
                 <i class="fa fa-facebook"></i>
+            </a>
+            <a href="https://github.com/Deuser1209" target="_blank">
+              <i class="fa fa-github"></i>
             </a>
         </div>
         <button>More info</button>
