--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to A3K55!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./fontawesome-free-6.5.1-web/fontawesome-free-6.5.1-web/css/all.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="a3">
@@ -22,6 +22,8 @@
                     + 41 boys <br>
                     + 2 girls <br>
                 - Room: G205 <br>
+                -
+                <a href="https://tringuyen3110.github.io/minhtri/" target="_blank"> Some pictures and videos about our class </a>
             </h3>
         </p>
     </div>
@@ -33,7 +35,7 @@
         <p>Form teacher</p>
         <div class="card__social">
             <a href="https://www.facebook.com/hoduchanhdhv" target="_blank">
-                <i class="fa fa-facebook"></i>
+                <i class="fa-brands fa-facebook-f" ></i>
             </a>
         </div>
         <button>More info</button>
@@ -47,7 +49,7 @@
         <p>IT teacher</p>
         <div class="card__social">
             <a href="https://www.facebook.com/nguyenductoandhv" target="_blank">
-                <i class="fa fa-facebook"></i>
+                <i class="fa-brands fa-facebook-f" ></i>
             </a>
         </div>
         <button>More info</button>
@@ -60,10 +62,10 @@
         <p>Class monitor</p>
         <div class="card__social">
             <a href="https://www.facebook.com/quann.minh.19" target="_blank">
-                <i class="fa fa-facebook"></i>
+                <i class="fa-brands fa-facebook-f" ></i>
             </a>
             <a href="https://github.com/MinhQuanABCXYZ" target="_blank">
-              <i class="fa fa-github"></i>
+                <i class="fa-brands fa-github"></i>
             </a>
         </div>
         <button>More info</button>
@@ -76,10 +78,10 @@
         <p>Class secretary</p>
         <div class="card__social">
             <a href="https://www.facebook.com/nguyenngoc.phu.100046" target="_blank">
-                <i class="fa fa-facebook"></i>
+                <i class="fa-brands fa-facebook-f" ></i>
             </a>
             <a href="https://github.com/Deuser1209" target="_blank">
-              <i class="fa fa-github"></i>
+                <i class="fa-brands fa-github"></i>
             </a>
         </div>
         <button>More info</button>
