--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Form teacher</p>
         <div class="card__social">
             <a href="https://www.facebook.com/hoduchanhdhv" target="_blank">
-                <i class="fa-brands fa-facebook-f" ></i>
+                <i class="fa fa-facebook-f"></i>
             </a>
         </div>
         <button>More info</button>
@@ -49,7 +49,7 @@
         <p>IT teacher</p>
         <div class="card__social">
             <a href="https://www.facebook.com/nguyenductoandhv" target="_blank">
-                <i class="fa-brands fa-facebook-f" ></i>
+                <i class="fa fa-facebook-f"></i>
             </a>
         </div>
         <button>More info</button>
@@ -62,10 +62,10 @@
         <p>Class monitor</p>
         <div class="card__social">
             <a href="https://www.facebook.com/quann.minh.19" target="_blank">
-                <i class="fa-brands fa-facebook-f" ></i>
+                <i class="fa fa-facebook-f"></i>
             </a>
             <a href="https://github.com/MinhQuanABCXYZ" target="_blank">
-                <i class="fa-brands fa-github"></i>
+                <i class="fa fa-github"></i>
             </a>
         </div>
         <button>More info</button>
@@ -78,10 +78,10 @@
         <p>Class secretary</p>
         <div class="card__social">
             <a href="https://www.facebook.com/nguyenngoc.phu.100046" target="_blank">
-                <i class="fa-brands fa-facebook-f" ></i>
+                <i class="fa fa-facebook-f"></i>
             </a>
             <a href="https://github.com/Deuser1209" target="_blank">
-                <i class="fa-brands fa-github"></i>
+                <i class="fa fa-github"></i>
             </a>
         </div>
         <button>More info</button>
