--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     + 2 girls <br>
                 - Room: G205 <br>
                 -
-                <a href="https://tringuyen3110.github.io/minhtri/" target="_blank"> Some pictures and videos about our class </a>
+                <a href="https://tringuyen3110.github.io/minhtri/" target="_blank"> More pictures and videos about our class. </a>
             </h3>
         </p>
     </div>
