--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     + 41 boys <br>
                     + 2 girls <br>
                 - Room: G205 <br>
-                -
-                <a href="https://tringuyen3110.github.io/minhtri/" target="_blank"> More pictures and videos about our class. </a>
+                - More videos and pictures about our class. 
+                <a href="https://tringuyen3110.github.io/memories/" target="_blank">Click here.</a>
             </h3>
         </p>
     </div>
